# qt-telemetry-dashboard

./: .gitignore  CMakeLists.txt  Main.qml  README.md  echo-server.js  main.cpp
qml/: Main.qml
qml/components/: StatusBar.qml  TelemetryCard.qml
qml/screens/: DashboardScreen.qml  ErrorScreen.qml
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppState.cpp  AppState.h
src/models/: TelemetryItem.h  TelemetryModel.cpp  TelemetryModel.h
src/services/: ConnectionService.cpp  ConnectionService.h  TelemetryService.cpp  TelemetryService.h
src/utils/: Logger.cpp  Logger.h
src/workers/: TelemetryWorker.cpp  TelemetryWorker.h
